        flag set, append '(a)' to package names.
  * lib:
    - system/resolver:
      - Filter out changes of conflicting packages which don't
        effectively change the situation.
      - Use only reliable information from source packages for synchronizing
        source versions.
      - Reworked underlying data structures.
    - config:
      - Deleted option
        'cupt::resolver::synchronize-source-versions::exceptions'.
      - Deleted option 'cupt::worker::archives-space-limit::tries'.
    - system/worker:
      - Fixed not changing 'automatically installed' flag. This regression
        was introduced in 2.0.0~alpha3.
      - Fixed determining an empty extension of index files. This regression
        was introduced in 2.0.0~alpha1.
      - Don't use randomization anymore for implementing
        'cupt::worker::archives-space-limit' option.
      - When breaking changes to changesets, made sure that all subgroups of
        the same group are placed to the same changeset.
      - When purge option is used, don't auto-purge not changed packages in
        the state 'config-files'. Fixes a regression introduced in
        2.0.0~alpha1.
      - When purge option is used, do removal instead of purge for packages
        removed by resolver and not by user.
    - common:
      - compareVersionStrings: fixed sorting letters before other characters.
        This regression was introduced in 2.0.0~alpha1.
    - cache:
      - 'getPin': increased downgrade penalty in 5 times.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 07 Jan 2011 10:05:23 +0200

cupt2 (2.0.0~alpha3) UNRELEASED; urgency=low

  * All the non-experimental functionality from cupt 1.x is now implemented.

  * console:
    - Fixed non-working binary-to-source mapping in source package version
      expressions.
    - Disallow matching options by prefix. Fixes a regression since
      2.0.0~alpha1.
    - 'snapshot': implemented.
  * lib:
    - cache/binaryversion: