@@ -134,6 +134,15 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::resolver::synchronize-source-versions", "none" },
 		{ "cupt::resolver::track-reasons", "no" },
 		{ "cupt::resolver::type", "fair" },
+		{ "cupt::resolver::tune-score::new", "5" },
+		{ "cupt::resolver::tune-score::removal", "400" },
+		{ "cupt::resolver::tune-score::upgrade", "100" },
+		{ "cupt::resolver::tune-score::downgrade", "100" },
+		{ "cupt::resolver::tune-score::position-penalty", "20" },
+		{ "cupt::resolver::tune-score::quality-adjustment", "10" },
+		{ "cupt::resolver::tune-score::failed-recommends", "600" },
+		{ "cupt::resolver::tune-score::failed-suggests", "150" },
+		{ "cupt::resolver::tune-score::failed-synchronization", "200" },
 		{ "cupt::worker::archives-space-limit", "0" },
 		{ "cupt::worker::defer-triggers", "no" },
 		{ "cupt::worker::download-only", "no" },
